Practicing component communications

--- a/force-app/main/default/classes/testController.cls
+++ b/force-app/main/default/classes/testController.cls
@@ -7,4 +7,13 @@ public with sharing class testController {
             throw new AuraHandledException(e.getMessage());
         }
     }
+
+    @AuraEnabled
+    public static Integer countAccounts(){
+        try {
+            return (Integer)[SELECT Count(Id) totalAccount FROM Account where AccountNumber != null][0].get('totalAccount');
+        } catch (Exception e) {
+            throw new AuraHandledException(e.getMessage());
+        }
+    }
 }
