--- a/force-app/main/default/classes/CountryCodeHelper.cls
+++ b/force-app/main/default/classes/CountryCodeHelper.cls
@@ -1,6 +1,6 @@
 public class CountryCodeHelper {
   public static string getCountryCode(String country) {
-    Country_Code__mdt codes = Country_Code__mdt.getInstance(country);
+    Country_Code__mdt codes = UtilityController.getCountryCodeMDTByName(country);
     return codes.Country_Code__c;
   }
 }
