--- a/force-app/main/default/classes/UtilityController.cls
+++ b/force-app/main/default/classes/UtilityController.cls
@@ -1,14 +1,19 @@
 public class UtilityController {
     public static Map<String, Order_Request__mdt> getAllOrderRequestMDT(){
-        Map<String, Order_Request__mdt> mapOfRecords = new Map<String, Order_Request__mdt>();
+        if (Test.isRunningTest()){
+            Map<String, Order_Request__mdt> mapOfRecords = new Map<String, Order_Request__mdt>();
 
-        Order_Request__mdt mdt = new Order_Request__mdt();
-        mdt.DeveloperName = 'Method1';
-        mdt.HTTP_Method__c = 'POST';
-        mdt.ServiceURL__c = 'test';
-        
-        mapOfRecords.put('Method1', mdt);
-        return mapOfRecords;
+            Order_Request__mdt mdt = new Order_Request__mdt();
+            mdt.DeveloperName = 'Method1';
+            mdt.HTTP_Method__c = 'POST';
+            mdt.ServiceURL__c = 'test';
+            
+            mapOfRecords.put('Method1', mdt);
+            return mapOfRecords;
+        }
+        else{
+            return Order_Request__mdt.getAll();
+        }
     }
 
     public static Country_Code__mdt getCountryCodeMDTByName(String name){
